--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   animations: ^2.0.7
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
+  syncfusion_flutter_datepicker: ^20.4.51
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
