--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   equatable: ^2.0.5
   syncfusion_flutter_datepicker: ^20.4.51
   intl: ^0.18.0
+  shared_preferences: ^2.0.18
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
