--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.0
   shared_preferences: ^2.0.18
   provider: ^6.0.5
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
