--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.18
   provider: ^6.0.5
   flutter_rating_bar: ^4.0.1
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.2.2
 
 dev_dependencies:
   flutter_test:
