--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   firebase_core: ^2.8.0
   firebase_auth: ^4.2.2
+  firebase_database: ^10.0.16
 
 dev_dependencies:
   flutter_test:
